# VS

./: .gitignore  README.md  VC.html  generate.sh  text.txt
build-docker/: Dockerfile  ServerDockerfile  docker-compose.yml  generate.sh  stop_server.sh
cli/grrs/: Cargo.toml  test.sh
cli/grrs/rsc/mustache/: html_body_bottom.mustache  html_body_open.mustache  html_body_top.mustache  html_footer.mustache  html_header.mustache  html_open.mustache
cli/grrs/rsc/mustache/cover/: css_style.mustache  html_body_cover.mustache
cli/grrs/rsc/mustache/cv/: css_style.mustache  html_body_cv.mustache
cli/grrs/rsc/mustache/timeline/: css_style.mustache  html_body_timeline.mustache
cli/grrs/src/: main.rs
cli/grrs/src/generator/: cv_manual.rs  generator.rs
cli/grrs/src/merger/: mod.rs
cli/grrs/src/structures/: cli.rs  cv.rs  mod.rs  skill.rs
doc/: english.sh  first.sh  genereatCV.sh
doc/api/: README.md
doc/api/Apis/: ApplicationApi.md
src/: CV_timeline.html  VC.html  VC_clone.html
src/assets/: VC_clone.html
src/cli/: Cargo.toml
src/cli/rsc/mustache/: html_footer.mustache  html_header.mustache
src/cli/src/generator/: cv_manual.rs  generator.rs  mod.rs
src/cli/src/merger/: pdf_merger.rs
src/cli/src/structures/: cli.rs  cv.rs  mod.rs  time_point.rs
src/web/: .gitignore  Cargo.toml  README.md  build.rs  spacetime.json  spacetime.local.json  vs.swagger.yaml
src/web/spacetimedb/: Cargo.toml
src/web/spacetimedb/src/: lib.rs
src/web/src/: default_responses.rs  handler.rs  logger.rs  main.rs
src/web/src/handler/: application_handler.rs
(+3 files in other folders)
