[package]
name = "web"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4.0", features = ["full"] }