[package]
name = "web"
version = "0.1.0"
edition = "2021"


[dependencies]
hyper = { version = "1.0", features = ["server", "client", "http1", "http2"] }
tokio = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
spacetimedb-sdk = "2.1.0"

